--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,77 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+.price-cards-container {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+  background-color: #0056b3;
+}
+
+.price-card {
+  background-color: #f0f0f0;
+  border-radius: 10px;
+  padding: 20px;
   text-align: center;
+  flex: 1;
+  margin: 0 10px;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.card-header {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 20px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
+.plan {
   color: #888;
+  font-size: 14px;
+  text-transform: uppercase;
+  display: block;
+ 
 }
+
+.price {
+  font-size: 32px;
+  color: #007bff;
+  margin-top: 5px;
+  border-bottom: black solid 1px;
+}
+
+.card-features {
+  list-style: none;
+  padding: 0;
+  margin-top: 20px;
+  
+}
+
+.card-features li {
+  margin-bottom: 10px;
+  justify-content: flex-start;
+    display: flex;
+}
+
+.disabled {
+  color: #ccc;
+  text-decoration: line-through;
+}
+
+.enabled {
+  color: #333;
+}
+
+.button {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 20px;
+  cursor: pointer;
+  font-size: 16px;
+  margin-top: 20px;
+  transition: background-color 0.3s ease;
+  width: 280px;
+  font-weight: bold;
+}
+
+.button:hover {
+  background-color: #0056b3;
+}
+
